@@ -1,3 +1,8 @@
+2001-12-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* resources.ht (Links): Link to Vincent Danen's "Controlling SPAM
+	under Mandrake Linux, Part 2".
+	
 2001-12-07  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* results.ht (Links): Add testimonial from Vincent Danen
